[package]
name = "metricas-bueno"
version = "0.1.0"
edition = "2021"

[dependencies]
sysinfo = { version = "0.35.0", features = ["network"] }
# netstat2 = "0.11.1"  # Probablemente no se usa
chrono = "0.4.41"
rusqlite = { version = "0.35.0", features = ["chrono", "bundled"] }
winreg = "0.55.0"
notify-rust = "4.11.7"